Fix for overlaping element on homepage when the flyout mobile menu is active.

--- a/Source/css/components/_mobile-navigation.scss
+++ b/Source/css/components/_mobile-navigation.scss
@@ -86,7 +86,7 @@ body > form {
 	position: absolute; /* we can't use fixed here :( */
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 1000;
 	width: 300px;
 	height: 100%;
 	transform: translate3d(-100%, 0, 0);
